--- a/templates/index.html
+++ b/templates/index.html
@@ -143,7 +143,7 @@
 
     <div class="section">
         <div class="card">
-            <h3>Iniciar sesión</h3>
+            <h3>CTF 2</h3>
             <p>No es usuario común, pero dicta lo que sucede en el sistema — ¿quién es?.</p>
             <a href="/login">Entrar</a>
         </div>
