se añaden banderas

--- a/templates/message_board.html
+++ b/templates/message_board.html
@@ -148,6 +148,7 @@
     </style>
 </head>
 <body>
+    <!-- segti{inspect_done} -->
     <div id="particles-js"></div>
 
     <div class="container">
